# mievformer_package

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  run_tutorial.py  tutorial.ipynb
.github/workflows/: docs.yml  publish-test.yml  publish.yml
docs/: api.rst  conf.py  index.rst  installation.md  overview.md  references.md  release_notes.md  requirements.txt  tutorial.md
docs/tutorials/: getting_started.md
mievformer/: __init__.py  analyze_niche_specificity.py  api.py  incgene.py  nicheformer.py  plottings.py  prob_nmfae.py  utils.py  workflow.py
mievformer/cci/: binary_cci.py  cci.py  cci_function.py  test_binary_cci.py
mievformer/cci/docs/: cell_cell_interaction.md
tests/: conftest.py  test_api.py
