[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mievformer"
version = "0.1.0"
description = "A package for nicheformer analysis"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT License"}
authors = [
  {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "torch",
    "pytorch-lightning",
    "scanpy",
    "anndata",
    "numpy",
    "pandas",
    "scipy",
    "statsmodels",
    "scikit-learn",
    "einops",
    "matplotlib",
    "networkx",
    "jax",
    "optax",
    "squidpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
packages = ["mievformer"]


[project.urls]
"Homepage" = "https://github.com/nichedynamics/nicheformer"
"Bug Tracker" = "https://github.com/nichedynamics/nicheformer/issues"
